feat: add icon and logo and name of the page

--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- Usar el favicon ICO solicitado -->
+    <link rel="icon" href="/icono.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>exam-bank</title>
+    <title>Parcialízate</title>
   </head>
   <body>
+
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
